[package]
name = "protectus"
version = "0.1.1"
edition = "2021"
authors = ["Dan0xE <contact@dan0xe.me>"]
exclude = ["/webview-src", "/examples"]
links   = "protectus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1", features = ["derive"] }
vmprotect = {git = "https://github.com/Dan0xE/vmprotect.git", features = ["licensing", "service"]}
base64 = "0.22"
chrono = "0.4"

[build-dependencies]
tauri-plugin = { version = "2.0.0-beta", features = ["build"] }